# pikselsel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cmd.rs  frame.rs  main.rs  sender.rs  text.rs
src/cmd/: color.rs
