[package]
name = "pikselsel"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.16", features = ["derive"]}
colored = "2.1.0"
image = "0.24.7"
rand = "0.8.5"
rayon = "1.8.0"
rusttype = "0.9.3"
